trunk/Compiler/src/com/lexAndParse/XYZCompiler.java
/* Generated By:JJTree&JavaCC: Do not edit this line. XYZCompiler.java */
package com.lexAndParse;

import java.util.HashMap;
import java.util.Map;

public class XYZCompiler/*@bgen(jjtree)*/implements XYZCompilerTreeConstants, XYZCompilerConstants {/*@bgen(jjtree)*/
  protected JJTXYZCompilerState jjtree = new JJTXYZCompilerState();public static void main(String args [])
  {
    System.out.println("Reading from standard input...");
    System.out.print("Enter an expression like \u005c"1+(2+3)*var;\u005c" :");
    Map<String, Integer> tokenCountMap = new HashMap<String, Integer>();
    StringBuffer tokenStr = new StringBuffer("");
    XYZCompiler xyzc = new XYZCompiler(System.in);
    try
    {
      SimpleNode n = xyzc.program(tokenCountMap, tokenStr);
      n.dump("");
      System.out.println("Thank you.");
      System.out.println(tokenCountMap);
    }
    catch (Exception e)
    {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
    }
  }

  final public SimpleNode program(Map<String, Integer> tokenCountMap, StringBuffer tokenStr) throws ParseException {
 /*@bgen(jjtree) Program */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      mainClass(tokenCountMap, tokenStr);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CLASS:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        classDecl(tokenCountMap, tokenStr);
      }
    {if (true) return jjtn000;}
      jj_consume_token(0);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void mainClass(Map<String, Integer> tokenCountMap, StringBuffer tokenStr) throws ParseException {
 /*@bgen(jjtree) MainClass */
  SimpleNode jjtn000 = new SimpleNode(JJTMAINCLASS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      _class(tokenCountMap, tokenStr);
      id(tokenCountMap, tokenStr);
      jj_consume_token(LBRACE);
             tokenStr.append("LBRACE({)\u005cn");
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOLEAN:
        case INTEGER:
        case LONG:
        case ID:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        varOrMethodDecl(tokenCountMap, tokenStr);
      }
      _static(tokenCountMap, tokenStr);
      _void(tokenCountMap, tokenStr);
      _main(tokenCountMap, tokenStr);
      jj_consume_token(LPAREN);
             tokenStr.append("LPAREN(() ");
      jj_consume_token(RPAREN);
             tokenStr.append("RPAREN()) ");
      jj_consume_token(LBRACE);
             tokenStr.append("LBRACE({)\u005cn");
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACE:
        case BOOLEAN:
        case IF:
        case WHILE:
        case INTEGER:
        case LONG:
        case ID:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_3;
        }
        statement(tokenCountMap, tokenStr);
      }
      jj_consume_token(RBRACE);
             tokenStr.append("RBRACE(})\u005cn");
      jj_consume_token(RBRACE);
              jjtree.closeNodeScope(jjtn000, true);
              jjtc000 = false;
             tokenStr.append("RBRACE(})\u005cn");
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void classDecl(Map<String, Integer> tokenCountMap, StringBuffer tokenStr) throws ParseException {
 /*@bgen(jjtree) ClassDecl */
  SimpleNode jjtn000 = new SimpleNode(JJTCLASSDECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      _class(tokenCountMap, tokenStr);
      id(tokenCountMap, tokenStr);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EXTENDS:
        _extends(tokenCountMap, tokenStr);
        id(tokenCountMap, tokenStr);
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      jj_consume_token(LBRACE);
             tokenStr.append("LBRACE({)\u005cn");
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOLEAN:
        case INTEGER:
        case LONG:
        case ID:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
        varOrMethodDecl(tokenCountMap, tokenStr);
      }
      jj_consume_token(RBRACE);
              jjtree.closeNodeScope(jjtn000, true);
              jjtc000 = false;
             tokenStr.append("RBRACE(})\u005cn");
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void varOrMethodDecl(Map<String, Integer> tokenCountMap, StringBuffer tokenStr) throws ParseException {
 /*@bgen(jjtree) VarOrMethodDecl */
  SimpleNode jjtn000 = new SimpleNode(JJTVARORMETHODDECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case LONG:
        type(tokenCountMap, tokenStr);
        break;
      case ID:
        id(tokenCountMap, tokenStr);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      id(tokenCountMap, tokenStr);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
      case ASSIGN:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMICOLON:
          jj_consume_token(SEMICOLON);
                     jjtree.closeNodeScope(jjtn000, true);
                     jjtc000 = false;
                    tokenStr.append("SEMICOLON(;)\u005cn");
          break;
        case ASSIGN:
          assign(tokenStr);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INTEGER_LITERAL:
          case LONG_LITERAL:
          case LPAREN:
          case NOT:
          case FALSE:
          case NEW:
          case THIS:
          case TRUE:
          case ID:
            exp(tokenCountMap, tokenStr);
            break;
          case LSQPAREN:
            jj_consume_token(LSQPAREN);
                     tokenStr.append("LSQPAREN([) ");
            expList(tokenCountMap, tokenStr);
            jj_consume_token(RSQPAREN);
                     tokenStr.append("RSQPAREN(]) ");
            break;
          default:
            jj_la1[6] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          jj_consume_token(SEMICOLON);
                       jjtree.closeNodeScope(jjtn000, true);
                       jjtc000 = false;
                      tokenStr.append("SEMICOLON(;)\u005cn");
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      case LPAREN:
        jj_consume_token(LPAREN);
                   tokenStr.append("LPAREN(() ");
        formalList(tokenCountMap, tokenStr);
        jj_consume_token(RPAREN);
                   tokenStr.append("RPAREN()) ");
        jj_consume_token(LBRACE);
                   tokenStr.append("LBRACE({)\u005cn");
        preDecl(tokenCountMap, tokenStr);
        postDecl(tokenCountMap, tokenStr);
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LBRACE:
          case BOOLEAN:
          case IF:
          case WHILE:
          case INTEGER:
          case LONG:
          case ID:
            ;
            break;
          default:
            jj_la1[8] = jj_gen;
            break label_5;
          }
          statement(tokenCountMap, tokenStr);
        }
        _return(tokenCountMap, tokenStr);
        exp(tokenCountMap, tokenStr);
        jj_consume_token(SEMICOLON);
                      tokenStr.append("SEMICOLON(;)\u005cn");
        jj_consume_token(RBRACE);
                    jjtree.closeNodeScope(jjtn000, true);
                    jjtc000 = false;
                   tokenStr.append("RBRACE(})\u005cn");
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void mid_varDecl(Map<String, Integer> tokenCountMap, StringBuffer tokenStr) throws ParseException {
 /*@bgen(jjtree) Mid_VarDecl */
  SimpleNode jjtn000 = new SimpleNode(JJTMID_VARDECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      type(tokenCountMap, tokenStr);
      id(tokenCountMap, tokenStr);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
        jj_consume_token(SEMICOLON);
                   jjtree.closeNodeScope(jjtn000, true);
                   jjtc000 = false;
                  tokenStr.append("SEMICOLON(;)\u005cn");
        break;
      case ASSIGN:
        assign(tokenStr);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INTEGER_LITERAL:
        case LONG_LITERAL:
        case LPAREN:
        case NOT:
        case FALSE:
        case NEW:
        case THIS:
        case TRUE:
        case ID:
          exp(tokenCountMap, tokenStr);
          break;
        case LSQPAREN:
          jj_consume_token(LSQPAREN);
                   tokenStr.append("LSQPAREN([) ");
          expList(tokenCountMap, tokenStr);
          jj_consume_token(RSQPAREN);
                   tokenStr.append("RSQPAREN(]) ");
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(SEMICOLON);
                     jjtree.closeNodeScope(jjtn000, true);
                     jjtc000 = false;
                    tokenStr.append("SEMICOLON(;)\u005cn");
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void formalList(Map<String, Integer> tokenCountMap, StringBuffer tokenStr) throws ParseException {
 /*@bgen(jjtree) FormalList */
  SimpleNode jjtn000 = new SimpleNode(JJTFORMALLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case LONG:
        type(tokenCountMap, tokenStr);
        break;
      case ID:
        id(tokenCountMap, tokenStr);
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      id(tokenCountMap, tokenStr);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_6;
        }
        jj_consume_token(COMMA);
             tokenStr.append("COMMA(,) ");
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOLEAN:
        case INTEGER:
        case LONG:
          type(tokenCountMap, tokenStr);
          break;
        case ID:
          id(tokenCountMap, tokenStr);
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        id(tokenCountMap, tokenStr);
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void preDecl(Map<String, Integer> tokenCountMap, StringBuffer tokenStr) throws ParseException {
 /*@bgen(jjtree) PreDecl */
  SimpleNode jjtn000 = new SimpleNode(JJTPREDECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      pre(tokenCountMap, tokenStr);
      jj_consume_token(COLON);
                                         tokenStr.append("COLON(:) ");
      exp(tokenCountMap, tokenStr);
      jj_consume_token(SEMICOLON);
                                              jjtree.closeNodeScope(jjtn000, true);
                                              jjtc000 = false;
                                             tokenStr.append("SEMICOLON(;)\u005cn");
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void postDecl(Map<String, Integer> tokenCountMap, StringBuffer tokenStr) throws ParseException {
 /*@bgen(jjtree) PostDecl */
  SimpleNode jjtn000 = new SimpleNode(JJTPOSTDECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      post(tokenCountMap, tokenStr);
      jj_consume_token(COLON);
                                          tokenStr.append("COLON(:) ");
      exp(tokenCountMap, tokenStr);
      jj_consume_token(SEMICOLON);
                                              jjtree.closeNodeScope(jjtn000, true);
                                              jjtc000 = false;
                                             tokenStr.append("SEMICOLON(;)\u005cn");
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void type(Map<String, Integer> tokenCountMap, StringBuffer tokenStr) throws ParseException {
 /*@bgen(jjtree) Type */
  SimpleNode jjtn000 = new SimpleNode(JJTTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER:
        integer(tokenCountMap, tokenStr);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LSQPAREN:
          jj_consume_token(LSQPAREN);
                tokenStr.append("LSQPAREN([) ");
          jj_consume_token(RSQPAREN);
                tokenStr.append("RSQPAREN(]) ");
          break;
        default:
          jj_la1[15] = jj_gen;
          ;
        }
        break;
      case LONG:
        _long(tokenCountMap, tokenStr);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LSQPAREN:
          jj_consume_token(LSQPAREN);
                tokenStr.append("LSQPAREN([) ");
          jj_consume_token(RSQPAREN);
                tokenStr.append("RSQPAREN(]) ");
          break;
        default:
          jj_la1[16] = jj_gen;
          ;
        }
        break;
      case BOOLEAN:
        _boolean(tokenCountMap, tokenStr);
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void statement(Map<String, Integer> tokenCountMap, StringBuffer tokenStr) throws ParseException {
 /*@bgen(jjtree) Statement */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case LONG:
        mid_varDecl(tokenCountMap, tokenStr);
        break;
      case LBRACE:
        jj_consume_token(LBRACE);
             tokenStr.append("LBRACE({) ");
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LBRACE:
          case BOOLEAN:
          case IF:
          case WHILE:
          case INTEGER:
          case LONG:
          case ID:
            ;
            break;
          default:
            jj_la1[18] = jj_gen;
            break label_7;
          }
          statement(tokenCountMap, tokenStr);
        }
        jj_consume_token(RBRACE);
              jjtree.closeNodeScope(jjtn000, true);
              jjtc000 = false;
             tokenStr.append("RBRACE(}) ");
        break;
      case IF:
        _if(tokenCountMap, tokenStr);
        jj_consume_token(LPAREN);
              tokenStr.append("LPAREN(() ");
        exp(tokenCountMap, tokenStr);
        jj_consume_token(RPAREN);
              tokenStr.append("RPAREN()) ");
        statement(tokenCountMap, tokenStr);
        _else(tokenCountMap, tokenStr);
        statement(tokenCountMap, tokenStr);
        break;
      case WHILE:
        _while(tokenCountMap, tokenStr);
        jj_consume_token(LPAREN);
             tokenStr.append("LPAREN(() ");
        exp(tokenCountMap, tokenStr);
        jj_consume_token(RPAREN);
             tokenStr.append("RPAREN()) ");
        statement(tokenCountMap, tokenStr);
        break;
      case ID:
        id(tokenCountMap, tokenStr);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          id(tokenCountMap, tokenStr);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SEMICOLON:
            jj_consume_token(SEMICOLON);
                       jjtree.closeNodeScope(jjtn000, true);
                       jjtc000 = false;
                      tokenStr.append("SEMICOLON(;)\u005cn");
            break;
          case ASSIGN:
            assign(tokenStr);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case INTEGER_LITERAL:
            case LONG_LITERAL:
            case LPAREN:
            case NOT:
            case FALSE:
            case NEW:
            case THIS:
            case TRUE:
            case ID:
              exp(tokenCountMap, tokenStr);
              break;
            case LSQPAREN:
              jj_consume_token(LSQPAREN);
                       tokenStr.append("LSQRAREN([) ");
              expList(tokenCountMap, tokenStr);
              jj_consume_token(RSQPAREN);
                       tokenStr.append("RSQPAREN(]) ");
              break;
            default:
              jj_la1[19] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            jj_consume_token(SEMICOLON);
                         jjtree.closeNodeScope(jjtn000, true);
                         jjtc000 = false;
                        tokenStr.append("SEMICOLON(;)\u005cn");
            break;
          default:
            jj_la1[20] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        case LSQPAREN:
        case ASSIGN:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ASSIGN:
            assign(tokenStr);
            exp(tokenCountMap, tokenStr);
            jj_consume_token(SEMICOLON);
            break;
          case LSQPAREN:
            jj_consume_token(LSQPAREN);
                   tokenStr.append("LSQPAREN([) ");
            exp(tokenCountMap, tokenStr);
            jj_consume_token(RSQPAREN);
                   tokenStr.append("RSQPAREN(]) ");
            assign(tokenStr);
            exp(tokenCountMap, tokenStr);
            jj_consume_token(SEMICOLON);
                     jjtree.closeNodeScope(jjtn000, true);
                     jjtc000 = false;
                    tokenStr.append("SEMICOLON(;)\u005cn");
            break;
          default:
            jj_la1[21] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[22] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void exp(Map<String, Integer> tokenCountMap, StringBuffer tokenStr) throws ParseException {
 /*@bgen(jjtree) Exp */
  SimpleNode jjtn000 = new SimpleNode(JJTEXP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NEW:
        _new(tokenCountMap, tokenStr);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INTEGER:
        case LONG:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INTEGER:
            integer(tokenCountMap, tokenStr);
            break;
          case LONG:
            _long(tokenCountMap, tokenStr);
            break;
          default:
            jj_la1[24] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          jj_consume_token(LSQPAREN);
                   tokenStr.append("LSQPAREN([) ");
          exp(tokenCountMap, tokenStr);
          jj_consume_token(RSQPAREN);
                    jjtree.closeNodeScope(jjtn000, true);
                    jjtc000 = false;
